force-app/main/default/objects/RecruitmentPlan__c/RecruitmentPlan__c.object-meta.xml
<CustomObject>
    <label>Recruitment Plan</label>
    <nameField>
        <label>Recruitment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>