force-app/main/default/objects/RecruitmentPlan__c/fields/ApproverBOD__c.field-meta.xml
<CustomField>
    <fullName>ApproverBOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>