force-app/main/default/objects/RecruitmentPlan__c/fields/MonthEndDate__c.field-meta.xml
<CustomField>
    <fullName>MonthEndDate__c</fullName>
    <formula>MONTH( EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>