force-app/main/default/objects/RecruitmentPlan__c/fields/MonthStartDate__c.field-meta.xml
<CustomField>
    <fullName>MonthStartDate__c</fullName>
    <formula>MONTH( StartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>