force-app/main/default/objects/RecruitmentPlan__c/fields/Numberofpositions__c.field-meta.xml
<CustomField>
    <fullName>Numberofpositions__c</fullName>
    <label>Number of positions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>