force-app/main/default/objects/RecruitmentPlan__c/fields/RecruitmentRequest__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Request</label>
    <referenceTo>RecruitmentRequest__c</referenceTo>
    <relationshipLabel>Recruitment Plan</relationshipLabel>
    <relationshipName>Recruitment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>