force-app/main/default/objects/RecruitmentPlan__c/validationRules/Length_of_Year_have_to_equal_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_of_Year_have_to_equal_4</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK( Year__c ),
  LEN(Year__c) &lt;&gt; 4
  )</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>The year field must not be blank and must be at least 4 characters long.</errorMessage>
</ValidationRule>